Tecla de limpar tela

--- a/calculadora.html
+++ b/calculadora.html
@@ -16,12 +16,13 @@
 			
 			<tr>
 				<td colspan="4">
-				<input type="text"  maxlength="30" readonly="readonly" name="tela" id="tela"/>
+				<input type="text"  maxlength="30" readonly="readonly" name="tela" value="0" id="tela"/>
 				</td>
 			</tr>
 			
 			<tr>
 				<td><input type="button" name="apagarUlt" id="apagarUlt" value="<-" onclick="limparUltimoSinal()"/></td>
+				<td><input type="button" name="limpa" id="limpat" value="C" onclick="limparTela()"/></td>
 			</tr>
 			
 			<tr>
@@ -78,6 +79,10 @@
 					var valorArmazenado = document.formulario.tela.value;
 					var aux = 	valorArmazenado.substring(0, valorArmazenado.length - 1)
 					document.formulario.tela.value = aux;
+				}
+				
+				function limparTela(){
+					document.formulario.tela.value = 0;
 				}
 				
 			</script>
