Adicionando codificação da página para utf-8

--- a/calculadora.html
+++ b/calculadora.html
@@ -1,8 +1,11 @@
-	<!--Desenvolvido por Francisco Chaves -->
+<!DOCTYPE html>
+
+<!--Desenvolvido por Francisco Chaves -->
 
 <html>
 
 	<head>
+			<meta charset="UTF-8">
 			<title>Calculadora</title>
 			<link href ="css/style.css" type="text/css" rel ="stylesheet" />
 	</head>
@@ -57,7 +60,7 @@
 		</table>
 	 </form>
 	</div>
-	
+
 	<script type="text/javascript"></script>
 	</body>
 	
