--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
 
 <body>
 
-	<div class="container">
+	<nav class="navbar navbar-expand navbar-dark bg-dark">
+		<div class="nav navbar-nav">
+			<a class="nav-item nav-link active" href="#">Calculadora JavaScript <span class="sr-only">(current)</span></a>
+		</div>
+	</nav>
+	<div class="container" style="margin-top: 40px;">
 		<div class="row">
 			<div class="col-md-12">
-				<h1>Calculadora JavaScript</h1>
+				
 				<div id="calculadora">
 
 					<table>
