--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 
 	<nav class="navbar navbar-expand navbar-dark bg-dark">
 		<div class="nav navbar-nav">
-			<a class="nav-item nav-link active" href="#">Calculadora JavaScript <span class="sr-only">(current)</span></a>
+			<a class="nav-item nav-link active" href="#">Calculadora JavaScript <span
+					class="sr-only">(current)</span></a>
 		</div>
 	</nav>
 	<div class="container" style="margin-top: 40px;">
 		<div class="row">
 			<div class="col-md-12">
-				
+
 				<div id="calculadora">
 
 					<table>
@@ -65,6 +66,12 @@
 			</div>
 		</div>
 	</div>
+
+	<footer class="footer mt-auto py-3 navbar-dark bg-default">
+		<div class="container">
+			<span>Produzido por Francisco Chaves.</span>
+		</div>
+	</footer>
 
 	<script type="text/javascript" src="./js/script.js"></script>
 	<!-- Optional JavaScript -->
